--- a/fishchants/pom.xml
+++ b/fishchants/pom.xml
@@ -6,8 +6,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fun.sunrisemc.fishchants</groupId>
-	<artifactId>fishchants</artifactId>
-	<version>0.0.2</version>
+	<artifactId>Fishchantments</artifactId>
+	<version>0.0.3</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
