Rewrote everything 12 times.

--- a/fishchants/pom.xml
+++ b/fishchants/pom.xml
@@ -5,9 +5,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fun.sunrisemc.fishchants</groupId>
+	<groupId>fun.sunrisemc.fishchantments</groupId>
 	<artifactId>Fishchantments</artifactId>
-	<version>0.0.5</version>
+	<version>0.1.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
