--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fun.sunrisemc.fishchantments</groupId>
+	<groupId>fun.sunrisemc</groupId>
 	<artifactId>Fishchantments</artifactId>
 	<version>0.2.6</version>
 
