--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,11 @@
-name: Fishchantments
-main: fun.sunrisemc.fishchantments.Plugin
+name: CustomEnchantments
+main: com.thefishnextdoor.enchantments.Plugin
 version: 0.2.6
 api-version: 1.15
 authors: ["TheFishNextDoor"]
 description: Custom Enchantments by TheFishNextDoor
 commands:
   fenchant:
-    description: Apply a fishchantment
-    usage: /fenchant <fishchantment> [level]
-    permission: fishchantments.enchant
-    aliases: [fishenchant, fishchantment]
+    description: Apply an enchantment to the item in your hand
+    usage: /fenchant <enchantment> [level]
+    permission: customenchantments.commands.fenchant
