--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: CustomEnchantments
 main: com.thefishnextdoor.enchantments.Plugin
-version: 0.3.0
+version: 0.3.1
 api-version: 1.15
 authors: ["TheFishNextDoor"]
 description: Custom Enchantments by TheFishNextDoor
@@ -9,3 +9,7 @@ commands:
     description: Apply an enchantment to the item in your hand
     usage: /fenchant <enchantment> [level]
     permission: customenchantments.commands.fenchant
+  reloadenchantments:
+    description: Reload custom enchantments
+    usage: /reloadenchantments
+    permission: customenchantments.commands.reload
