--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: CustomEnchantments
-main: com.thefishnextdoor.enchantments.Plugin
+main: com.thefishnextdoor.customenchantments.Plugin
 version: 0.3.3
 api-version: 1.15
 authors: ["TheFishNextDoor"]
