--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,22 +6,22 @@ authors: ["TheFishNextDoor"]
 description: Custom Enchantments by TheFishNextDoor
 commands:
   fce:
-    description: Custom Enchantments by TheFishNextDoor
+    description: Custom Enchantments by TheFishNextDoor.
     usage: /fce <subcommand>
   fenchant:
-    description: Apply an enchantment to the item in your hand
+    description: Apply an enchantment to the item in your hand.
     usage: /fenchant <enchantment> [level]
     permission: fce.admin.fenchant
   enchantedbook:
-    description: Get an enchanted book with the specified enchantment
+    description: Get an enchanted book with the specified enchantment.
     usage: /enchantedbook <enchantment> [level]
     permission: fce.admin.enchantedbook
   enchantinfo:
-    description: Get information about an enchantment
+    description: Get information about an enchantment.
     usage: /enchantinfo <enchantment>
     permission: fce.user.enchantinfo
   disenchant:
-    description: Remove an enchantment from the item in your hand and return the enchantment book
+    description: Remove an enchantment from the item in your hand and return the enchantment book.
     usage: /disenchant <enchantment>
     permission: fce.user.disenchant
   combineenchantments:
