--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 			<version>1.20.4-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot</artifactId>
+			<version>1.20.4-R0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/lib/craftbukkit-1.20.4.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
