--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,7 @@ remove-overridden-enchantments: true # Remove unbreaking and mending when unbrea
 check-lore: true # Fixes plugins with lossy item saving from losing the applied enchantments (e.g. Essentials kits)
 use-arabic-numerals: false # Use 1, 2, 3 instead of I, II, III
 play-effects: true # Certain enchantments will create particle effects
-disenchant-cost-levels: 3 # The number of levels it costs to use the disenchant command
-combine-enchantments-cost-levels: 3 # The number of levels it costs to use the combine enchantments command
-seeking-radius: 12 # How far away the seeking enchantment will look for entities
+override-anvil-cost-levels: -1 # The number of levels it costs to use the anvil, -1 to use the default cost
+disenchant-command-cost-levels: 3 # The number of levels it costs to use the disenchant command
+combine-enchantments-command-cost-levels: 3 # The number of levels it costs to use the combine enchantments command
+seeking-enchantment-radius: 12 # How far away the seeking enchantment will look for entities
